--- a/src/MathCalculator/MathCalculator.csproj
+++ b/src/MathCalculator/MathCalculator.csproj
@@ -3,8 +3,11 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MathCalculator.Core\MathCalculator.Core.csproj" />
+  </ItemGroup>
 
 </Project>
